# quiz

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
app/: config.py  exceptions.py  main.py  services.py
app/db/: database.py
app/db/models/: question.py
app/repository/: __init__.py  depenedencies.py  interfaces.py  service.py
app/routers/: __init__.py  question.py
app/schemas/: question.py
docker/: init.sh
migrations/: env.py
migrations/versions/: 344af4f23333_database_initianion.py
